Shifted default ul style and created seperate ul styling for nav. Moved profile pic to correct section

--- a/about-me1.css
+++ b/about-me1.css
@@ -25,7 +25,7 @@ h1,h2,h3 {
     /* font-weight: 700; */
   }
   
-/* h1 {
+ h1 {
     font-size: 6rem;
   }
   
@@ -35,11 +35,7 @@ h2 {
   
 h3 {
     font-size: 2.2rem;
-  } */
-
-ul {
-    list-style: none;
-  }
+  } 
   
 a {
     text-decoration: none;
@@ -68,6 +64,7 @@ img {
     display: flex;
     margin-right: 2rem;
     margin: 0 1rem;
+    list-style: none;
   }
 
 .nav-list a {
@@ -97,11 +94,18 @@ img {
     color: var(--main-yellow);
   }  
 
-  #quote {
+#quote {
     font-size: 1rem;
     font-weight: 50;
     font-style: italic;
     color: var(--main-white);
+  }
+
+.profile-picture {
+    display: block;
+    border:4px solid var(--main-white);
+    max-width: 25%;
+    max-height:25%;
   }
 
   /* Contact section */
@@ -117,20 +121,15 @@ img {
 
 .skills {
     display: grid;
-    width: 30%;
-    height:30%;
-    border:4px solid var(--main-white);
+    width: 40%;
+    height:40%;
+    border:4px solid var(--main-yellow);
+    background-color: var(--main-white);
+    color: black;
   }
 
 .skill-icon {
-  width: 30px;
-}
-
-.profile-picture {
-  display: block;
-  border:4px solid var(--main-white);
-  max-width: 25%;
-  max-height:25%;
+    width: 40px;
 }
 
 /* Footer */
